--- a/BFViewFactory/Base.lproj/Main.storyboard
+++ b/BFViewFactory/Base.lproj/Main.storyboard
@@ -1,24 +1,85 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="guF-E3-E17"/>
+                        <viewControllerLayoutGuide type="bottom" id="lVM-ju-1XM"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s9p-Hu-DsX">
+                                <rect key="frame" x="16" y="20" width="343" height="128"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="pAw-49-P1z"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LPh-Ke-sjX">
+                                <rect key="frame" x="16" y="577" width="343" height="70"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="35M-8Z-cIJ">
+                                        <rect key="frame" x="8" y="8" width="65" height="54"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="65" id="gnY-jI-3lx"/>
+                                        </constraints>
+                                        <state key="normal" title="Button1"/>
+                                        <connections>
+                                            <action selector="actionBtn1:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qz9-gG-wkp"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9gI-Lc-kXf">
+                                        <rect key="frame" x="81" y="8" width="65" height="54"/>
+                                        <state key="normal" title="Button2"/>
+                                        <connections>
+                                            <action selector="actionBtn2:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XaX-4M-6eH"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="35M-8Z-cIJ" secondAttribute="bottom" constant="8" id="2sF-AH-vYd"/>
+                                    <constraint firstItem="9gI-Lc-kXf" firstAttribute="width" secondItem="35M-8Z-cIJ" secondAttribute="width" id="3Em-Rz-6lx"/>
+                                    <constraint firstItem="9gI-Lc-kXf" firstAttribute="centerY" secondItem="35M-8Z-cIJ" secondAttribute="centerY" id="DKR-gr-eVD"/>
+                                    <constraint firstItem="9gI-Lc-kXf" firstAttribute="leading" secondItem="35M-8Z-cIJ" secondAttribute="trailing" constant="8" id="Dgy-Hm-6ev"/>
+                                    <constraint firstItem="9gI-Lc-kXf" firstAttribute="height" secondItem="35M-8Z-cIJ" secondAttribute="height" id="IOO-07-cp8"/>
+                                    <constraint firstItem="35M-8Z-cIJ" firstAttribute="top" secondItem="LPh-Ke-sjX" secondAttribute="top" constant="8" id="J82-2G-Rt7"/>
+                                    <constraint firstAttribute="height" constant="70" id="Xeq-y3-Bi7"/>
+                                    <constraint firstItem="35M-8Z-cIJ" firstAttribute="leading" secondItem="LPh-Ke-sjX" secondAttribute="leading" constant="8" id="f68-0m-m4u"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="s9p-Hu-DsX" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="0Wv-F9-myL"/>
+                            <constraint firstItem="LPh-Ke-sjX" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="2Mp-Wd-6zF"/>
+                            <constraint firstItem="LPh-Ke-sjX" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="8NM-uY-PzQ"/>
+                            <constraint firstItem="lVM-ju-1XM" firstAttribute="top" secondItem="LPh-Ke-sjX" secondAttribute="bottom" constant="20" id="E2y-6k-uFq"/>
+                            <constraint firstItem="s9p-Hu-DsX" firstAttribute="top" secondItem="guF-E3-E17" secondAttribute="bottom" id="KYV-DL-0wS"/>
+                            <constraint firstItem="s9p-Hu-DsX" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="u7m-dJ-30G"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="subView1" destination="s9p-Hu-DsX" id="Wvb-9x-7x5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="24.800000000000001" y="28.335832083958024"/>
         </scene>
     </scenes>
 </document>
